Modi: pop-out resolve container-x-overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -847,4 +847,12 @@ td {
   min-height: calc(100vh - 100px);
 }
 
+.popup-container .modal-body {
+  overflow-x: scroll;
+}
+
+.popup-container .modal-body div.popup-container {
+  overflow-x: scroll;
+}
+
 /*# sourceMappingURL=style.css.map */
